fix update y created
